Adicionando um subtitulo, subindo p branch DevOps

--- a/teste.html
+++ b/teste.html
@@ -8,5 +8,6 @@
 	
 		
 		<h1>Criando arquivos numa branch nova!!</h1>
+		<h2>Fazendo um teste para verificação da nova branch</h2>
 	</body>	
 </html>	
